@@ -698,6 +698,11 @@ flip_level_rnd(int flp)
     int c = 0;
     if ((flp & 1) && rn2(2)) c |= 1;
     if ((flp & 2) && rn2(2)) c |= 2;
+
+    /* Workaround for preventing the stairs to Vlad's tower appearing
+     * in the wizard's tower because of a bug in level flipping. */
+    if (On_W_tower_level(&u.uz)) { flp &= 1; }
+
     flip_level(c);
 }
 
